src/compiletest/qcell-12.stderr
error[E0277]: `Rc<()>` cannot be sent between threads safely
 --> $DIR/qcell-12.rs:8:5
  |
7 |     fn is_send<T: Send>() {}
  |                   ---- required by this bound in `is_send`
8 |     is_send::<QCell<Rc<()>>>();  // Compile fail
  |     ^^^^^^^^^^^^^^^^^^^^^^^^ `Rc<()>` cannot be sent between threads safely
  |
  = help: within `QCell<Rc<()>>`, the trait `Send` is not implemented for `Rc<()>`
  = note: required because it appears within the type `UnsafeCell<Rc<()>>`
  = note: required because it appears within the type `QCell<Rc<()>>`
